fixing squashed map controls

--- a/app/assets/stylesheets/public/map.scss
+++ b/app/assets/stylesheets/public/map.scss
@@ -1,4 +1,7 @@
 #map {
+  * {
+    max-width: none;
+  }
   width: 870px;
   height: 540px;
 }
